[package]
name = "agent-pay"
version = "0.1.0"
edition = "2021"
description = "Multi-chain payments for NEAR agents. OutLayer custody + MPC chain signatures + x402/pay.sh integration."

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
tracing = "0.1"
sha2 = "0.10"
ed25519-dalek = "2"
thiserror = "2"
solana-sdk = "2"
bincode = "1"
async-trait = "0.1"
http = "1"

# MPP protocol (standard 402 with WWW-Authenticate)
mpp = { version = "0.10.0", features = ["client"] }

# CLI deps
atty = "0.2"

[[bin]]
name = "agent-pay"
path = "src/main.rs"
